syntax = "proto3";
package ranking.core;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCSCORE";
option csharp_namespace = "SnapProto.Ranking.Core";

import "ranking/core/SCSCOREClientInfo.proto";
import "ranking/core/SCSCOREGeo.proto";
import "ranking/core/SCSCOREUuid.proto";

message SCSCOREClientInfo {
    .ranking.core.SCSCOREUUID userId = 1;
    .ranking.core.SCSCOREAppInfo appInfo = 2;
    .ranking.core.SCSCOREConnectionInfo connectionInfo = 3;
    .ranking.core.SCSCOREDeviceInfo deviceInfo = 4;
    .ranking.core.SCSCOREGeoLocation location = 5;
    string countryCode = 6;
    bool isEmployee = 7;
    .ranking.core.SCSCOREGeoAddress geoAddress = 8;
}

message SCSCORERequestMetadata {
    string requestId = 1;
    int64 requestTimestampMs = 2;
    .ranking.core.SCSCORERequestMetadata.SCSCORERequestOrigin_Enum origin = 3;
    .ranking.core.SCSCOREClientInfo clientInfo = 4;
    enum SCSCORERequestOrigin_Enum {
        SCSCORERequestOrigin_Enum_Unknown = 0;
        SCSCORERequestOrigin_Enum_SnapchatApp = 1;
        SCSCORERequestOrigin_Enum_Fsn = 2;
        SCSCORERequestOrigin_Enum_Impala = 3;
        SCSCORERequestOrigin_Enum_ContentInsightsPipeline = 4;
        SCSCORERequestOrigin_Enum_InternalTest = 5;
        SCSCORERequestOrigin_Enum_InternalAutomation = 6;
        SCSCORERequestOrigin_Enum_InternalLoadtest = 7;
        SCSCORERequestOrigin_Enum_Snapkit = 8;
        SCSCORERequestOrigin_Enum_Mixer = 9;
        SCSCORERequestOrigin_Enum_InternalPubsub = 10;
        SCSCORERequestOrigin_Enum_InternalBackfill = 11;
        SCSCORERequestOrigin_Enum_StoryStudio = 12;
        SCSCORERequestOrigin_Enum_NotificationIndexer = 13;
        SCSCORERequestOrigin_Enum_SpamService = 14;
        SCSCORERequestOrigin_Enum_Orca = 15;
        SCSCORERequestOrigin_Enum_NotificationSender = 16;
        SCSCORERequestOrigin_Enum_StoryManagement = 17;
        SCSCORERequestOrigin_Enum_StoryTeller = 18;
        SCSCORERequestOrigin_Enum_Gravy = 19;
        SCSCORERequestOrigin_Enum_Snapweb = 20;
        SCSCORERequestOrigin_Enum_SnapjoinerV2 = 21;
        SCSCORERequestOrigin_Enum_ModerationService = 22;
        SCSCORERequestOrigin_Enum_HighlightService = 23;
        SCSCORERequestOrigin_Enum_TestPlatform = 24;
        SCSCORERequestOrigin_Enum_BusinessApi = 25;
        SCSCORERequestOrigin_Enum_CommunityOrg = 26;
        SCSCORERequestOrigin_Enum_Music = 27;
        SCSCORERequestOrigin_Enum_ChangeUserService = 28;
        SCSCORERequestOrigin_Enum_Charms = 29;
        SCSCORERequestOrigin_Enum_PieReviewToolBackfill = 30;
        SCSCORERequestOrigin_Enum_SearchDns = 31;
        SCSCORERequestOrigin_Enum_Pfe = 32;
        SCSCORERequestOrigin_Enum_Context = 33;
        SCSCORERequestOrigin_Enum_MapsContent = 34;
        SCSCORERequestOrigin_Enum_ReadReceiptIndexer = 35;
        SCSCORERequestOrigin_Enum_Mcs = 36;
        SCSCORERequestOrigin_Enum_Cameos = 37;
        SCSCORERequestOrigin_Enum_Cds = 38;
        SCSCORERequestOrigin_Enum_Usi = 39;
        SCSCORERequestOrigin_Enum_SnapjoinerV1 = 40;
        SCSCORERequestOrigin_Enum_AddFriend = 41;
        SCSCORERequestOrigin_Enum_ProfileAddFriend = 42;
        SCSCORERequestOrigin_Enum_ProfileFriendingSubtext = 43;
        SCSCORERequestOrigin_Enum_StoryIndicatorInRegistration = 44;
        SCSCORERequestOrigin_Enum_SearchQuickAdd = 45;
        SCSCORERequestOrigin_Enum_RepliesServer = 46;
    }
}

message SCSCORERequestOrigin {
}